--- a/code/project.json
+++ b/code/project.json
@@ -13,6 +13,7 @@
     "jsList" : [
         "src/resource.js",
         "src/app.js",
-        "src/Link.js"
+        "src/Link.js",
+        "src/IULayer.js"
     ]
 }
