--- a/code/project.json
+++ b/code/project.json
@@ -14,6 +14,9 @@
         "src/resource.js",
         "src/app.js",
         "src/Link.js",
-        "src/IULayer.js"
+        "src/IULayer.js",
+        "src/Octorock.js",
+        "src/DisparoOctorock.js",
+        "src/GameScene.js"
     ]
 }
