Nuevo menu de armas
Ahora al pjncha en el boton del juego, se abrira un menu de seleccion de
arma(funcionalidad todavia sin implementar), al pinchar el cada arma
solo se volvera a ejecutar gamescene, mas adelante cuando el personaje
disponga de armas se le implementara la funcionalidad a los botones para
que se pueda cambiar el arma

--- a/code/project.json
+++ b/code/project.json
@@ -17,6 +17,7 @@
         "src/IULayer.js",
         "src/Octorock.js",
         "src/DisparoOctorock.js",
+        "src/MenuObjetosLayer.js",
         "src/GameScene.js"
     ]
 }
