Primera version del boomerang de link-> letra k

--- a/code/project.json
+++ b/code/project.json
@@ -18,6 +18,7 @@
         "src/Octorok.js",
         "src/DisparoOctorok.js",
         "src/MenuObjetosLayer.js",
-        "src/GameScene.js"
+        "src/GameScene.js",
+        "src/Boomerang.js"
     ]
 }
