Creada capa de historia, le pasas un texto y te lo dibuja, falta ponerlo sobre un fondo.

--- a/code/project.json
+++ b/code/project.json
@@ -19,6 +19,7 @@
         "src/DisparoOctorok.js",
         "src/MenuObjetosLayer.js",
         "src/GameScene.js",
-        "src/Boomerang.js"
+        "src/Boomerang.js",
+        "src/HistoryLayer.js"
     ]
 }
