Arreglado error de boton menu
Permitia crear el menu de objetos infinitas veces

--- a/code/project.json
+++ b/code/project.json
@@ -20,6 +20,7 @@
         "src/Layers/MenuObjetosLayer.js",
         "src/GameScene.js",
         "src/Armas/Boomerang.js",
+        "src/Recolectables/Corazon.js",
         "src/Layers/HistoryLayer.js"
     ]
 }
