Añadido corazon y rupia recolectables
he puesto uno de cada tipo para probar su funcionalidad

--- a/code/project.json
+++ b/code/project.json
@@ -21,6 +21,7 @@
         "src/GameScene.js",
         "src/Armas/Boomerang.js",
         "src/Recolectables/Corazon.js",
+        "src/Recolectables/Rupia.js",
         "src/Layers/HistoryLayer.js"
     ]
 }
