Transiciones implementadas SIN ANIMACION

--- a/code/project.json
+++ b/code/project.json
@@ -25,6 +25,7 @@
         "src/Layers/HistoryLayer.js",
         "src/Manager/AnimationManager.js",
         "src/Armas/Bomba.js",
-        "src/Util/MathUtil.js"
+        "src/Util/MathUtil.js",
+        "src/Cuevas/Cueva.js"
     ]
 }
