--- a/code/project.json
+++ b/code/project.json
@@ -27,6 +27,7 @@
         "src/Armas/Bomba.js",
         "src/Util/MathUtil.js",
         "src/Cuevas/Cueva.js",
-        "src/Interaccionables/Jarron.js"
+        "src/Interaccionables/Jarron.js",
+        "src/Manager/CollisionManager.js"
     ]
 }
