--- a/code/res/Animaciones/explosion.plist
+++ b/code/res/Animaciones/explosion.plist
@@ -4,50 +4,50 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>bomb1.png</key>
+            <key>explosion0.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{-2,0}</string>
+                <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{14,17}</string>
+                <string>{15,15}</string>
                 <key>spriteSourceSize</key>
-                <string>{18,19}</string>
+                <string>{15,15}</string>
                 <key>textureRect</key>
-                <string>{{33,72},{14,17}}</string>
+                <string>{{142,1},{15,15}}</string>
                 <key>textureRotated</key>
                 <false/>
-            </dict>
-            <key>bomb2.png</key>
-            <dict>
-                <key>aliases</key>
-                <array/>
-                <key>spriteOffset</key>
-                <string>{-1,0}</string>
-                <key>spriteSize</key>
-                <string>{15,19}</string>
-                <key>spriteSourceSize</key>
-                <string>{17,19}</string>
-                <key>textureRect</key>
-                <string>{{35,55},{15,19}}</string>
-                <key>textureRotated</key>
-                <true/>
             </dict>
             <key>explosion1.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{-1,-1}</string>
+                <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{14,14}</string>
+                <string>{47,41}</string>
                 <key>spriteSourceSize</key>
-                <string>{34,30}</string>
+                <string>{47,41}</string>
                 <key>textureRect</key>
-                <string>{{49,72},{14,14}}</string>
+                <string>{{1,1},{47,41}}</string>
                 <key>textureRotated</key>
-                <false/>
+                <true/>
+            </dict>
+            <key>explosion10.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{13,30}</string>
+                <key>spriteSourceSize</key>
+                <string>{13,30}</string>
+                <key>textureRect</key>
+                <string>{{1,50},{13,30}}</string>
+                <key>textureRotated</key>
+                <true/>
             </dict>
             <key>explosion2.png</key>
             <dict>
@@ -56,11 +56,11 @@
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{24,20}</string>
+                <string>{26,23}</string>
                 <key>spriteSourceSize</key>
-                <string>{30,30}</string>
+                <string>{26,23}</string>
                 <key>textureRect</key>
-                <string>{{35,33},{24,20}}</string>
+                <string>{{74,38},{26,23}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -69,15 +69,15 @@
                 <key>aliases</key>
                 <array/>
                 <key>spriteOffset</key>
-                <string>{2,0}</string>
+                <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{30,27}</string>
+                <string>{14,13}</string>
                 <key>spriteSourceSize</key>
-                <string>{34,29}</string>
+                <string>{14,13}</string>
                 <key>textureRect</key>
-                <string>{{35,1},{30,27}}</string>
+                <string>{{33,50},{14,13}}</string>
                 <key>textureRotated</key>
-                <true/>
+                <false/>
             </dict>
             <key>explosion4.png</key>
             <dict>
@@ -86,11 +86,11 @@
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{32,31}</string>
+                <string>{18,18}</string>
                 <key>spriteSourceSize</key>
-                <string>{32,31}</string>
+                <string>{18,18}</string>
                 <key>textureRect</key>
-                <string>{{1,1},{32,31}}</string>
+                <string>{{134,36},{18,18}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
@@ -101,13 +101,13 @@
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{31,30}</string>
+                <string>{23,25}</string>
                 <key>spriteSourceSize</key>
-                <string>{31,30}</string>
+                <string>{23,25}</string>
                 <key>textureRect</key>
-                <string>{{1,66},{31,30}}</string>
+                <string>{{49,38},{23,25}}</string>
                 <key>textureRotated</key>
-                <true/>
+                <false/>
             </dict>
             <key>explosion6.png</key>
             <dict>
@@ -116,13 +116,58 @@
                 <key>spriteOffset</key>
                 <string>{0,0}</string>
                 <key>spriteSize</key>
-                <string>{32,30}</string>
+                <string>{30,33}</string>
                 <key>spriteSourceSize</key>
-                <string>{32,32}</string>
+                <string>{30,33}</string>
                 <key>textureRect</key>
-                <string>{{1,34},{32,30}}</string>
+                <string>{{110,1},{30,33}}</string>
                 <key>textureRotated</key>
                 <false/>
+            </dict>
+            <key>explosion7.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{32,35}</string>
+                <key>spriteSourceSize</key>
+                <string>{32,35}</string>
+                <key>textureRect</key>
+                <string>{{44,1},{32,35}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>explosion8.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{30,35}</string>
+                <key>spriteSourceSize</key>
+                <string>{30,35}</string>
+                <key>textureRect</key>
+                <string>{{78,1},{30,35}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>explosion9.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{0,0}</string>
+                <key>spriteSize</key>
+                <string>{20,30}</string>
+                <key>spriteSourceSize</key>
+                <string>{20,30}</string>
+                <key>textureRect</key>
+                <string>{{102,38},{20,30}}</string>
+                <key>textureRotated</key>
+                <true/>
             </dict>
         </dict>
         <key>metadata</key>
@@ -130,13 +175,13 @@
             <key>format</key>
             <integer>3</integer>
             <key>realTextureFileName</key>
-            <string>bomb.png</string>
+            <string>explosion.png</string>
             <key>size</key>
-            <string>{64,98}</string>
+            <string>{158,64}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:151845c1722598db6ab33163d7b70b06:8839596a0de29f49ae26e1a3372add53:4be35b031ff921caacbd927ebc46fc95$</string>
+            <string>$TexturePacker:SmartUpdate:a08f586f8a716a75f32454e1c9e51371:ca7e9692ef1d63e862203248e4d99e7c:c5a2c42043f2b0dda1e7e7adb0cc6144$</string>
             <key>textureFileName</key>
-            <string>bomb.png</string>
+            <string>explosion.png</string>
         </dict>
     </dict>
 </plist>
