Metodo de guardado basico
Por ahora solo guarda la posicion de link y inicia el juego en dicha
posicion.

--- a/code/project.json
+++ b/code/project.json
@@ -30,6 +30,7 @@
         "src/Cuevas/Cueva.js",
         "src/Interaccionables/Jarron.js",
         "src/Manager/CollisionManager.js",
+        "src/Guardado/Save.js",
         "src/Enemigos/Soldado.js"
     ]
 }
