--- a/code/project.json
+++ b/code/project.json
@@ -31,6 +31,7 @@
         "src/Interaccionables/Jarron.js",
         "src/Manager/CollisionManager.js",
         "src/Guardado/Save.js",
-        "src/Enemigos/Soldado.js"
+        "src/Enemigos/Soldado.js",
+        "src/CaveScene.js"
     ]
 }
