Flechas Recolectables y guardado para ellas
Cuando se recoje una flecha, las flecha de link aumentan en 5 unidades.
Y se guardan al darle al boton guardar

--- a/code/project.json
+++ b/code/project.json
@@ -24,6 +24,7 @@
         "src/Recolectables/Corazon.js",
         "src/Recolectables/Rupia.js",
         "src/Recolectables/BombaRecolectable.js",
+        "src/Recolectables/FlechaRecolectable.js",
         "src/Layers/HistoryLayer.js",
         "src/Manager/AnimationManager.js",
         "src/Armas/Bomba.js",
