--- a/code/project.json
+++ b/code/project.json
@@ -35,6 +35,8 @@
         "src/Guardado/Save.js",
         "src/Enemigos/Soldado.js",
         "src/CaveScene.js",
-        "src/ObjetoAnimado.js"
+        "src/ObjetoAnimado.js",
+        "src/Cuevas/Interruptor.js",
+        "src/Cuevas/Cofre.js"
     ]
 }
