contenedor de corazon y rupias en el medio(por peticion de jose)

--- a/code/project.json
+++ b/code/project.json
@@ -25,6 +25,7 @@
         "src/Recolectables/Rupia.js",
         "src/Recolectables/BombaRecolectable.js",
         "src/Recolectables/FlechaRecolectable.js",
+        "src/Recolectables/ContenedorCorazon.js",
         "src/Layers/HistoryLayer.js",
         "src/Manager/AnimationManager.js",
         "src/Armas/Bomba.js",
