Primera version keaton( faltan colisiones)

--- a/code/project.json
+++ b/code/project.json
@@ -41,6 +41,7 @@
         "src/ObjetoAnimado.js",
         "src/Cuevas/Interruptor.js",
         "src/Cuevas/Cofre.js",
-        "src/Cuevas/Zona.js"
+        "src/Cuevas/Zona.js",
+        "src/Enemigos/Keaton.js"
     ]
 }
