--- a/code/project.json
+++ b/code/project.json
@@ -42,6 +42,7 @@
         "src/Cuevas/Interruptor.js",
         "src/Cuevas/Cofre.js",
         "src/Cuevas/Zona.js",
+        "src/Cuevas/Puerta.js",
         "src/Enemigos/Keaton.js"
     ]
 }
