--- a/code/project.json
+++ b/code/project.json
@@ -24,11 +24,12 @@
         "src/Recolectables/Corazon.js",
         "src/Recolectables/Rupia.js",
         "src/Recolectables/BombaRecolectable.js",
-        "src/Recolectables/FlechaRecolectable.js",
         "src/Recolectables/ContenedorCorazon.js",
         "src/Recolectables/LlaveNormal.js",
         "src/Recolectables/LlaveJefe.js",
         "src/Layers/HistoryLayer.js",
+        "src/Layers/VictoriLayer.js",
+        "src/Layers/GameOverLayer.js",
         "src/Manager/AnimationManager.js",
         "src/Armas/Bomba.js",
         "src/Util/MathUtil.js",
